# deep_dive_into_cuda

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  agents.md
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: CMakeLists.txt  context_demo.cu  cublas_demo.cu  demo_build.sh  graph_capture_demo.cu  graph_demo.cu  greenctx_demo.cu  memory_demo.cu  module_demo.cu  streams_demo.cu  uvm_pagefault_demo.cu  vector_add.cu  wmma_matmul.cu
examples/rdc/: device_utils.cu  vector_add_rdc.cu
scripts/: precommit-check.sh
source/: conf.py  index.rst
source/_static/: arch_overview.mmd  cicc_architecture.mmd  compilation_journey.mmd  compilation_pipeline.mmd  cudafe_architecture.mmd  cudafe_outputs.mmd  custom.css  fatbinary_hierarchy.mmd  fatbinary_tool_flow.mmd  graph_sequence.mmd  host_link.mmd  intermediate_dataflow.mmd  ioctl_pie.mmd  kernel_launch_call_stack.mmd  kernel_launch_flow.mmd  libdevice_link.mmd  memory_layout.mmd  multiarch_fatbinary.mmd  nvcc_architecture.mmd  nvlink_flow.mmd  phase_decision.mmd  ptx_jit_flow.mmd  ptxas_architecture.mmd  rdc_flow.mmd  register_chain.mmd  runtime_call_chain.mmd  sass_execution.mmd  streams_flow.mmd  sync_mechanism.mmd  tileir_entry.mmd
source/appendix/: 01_resources.rst  02_glossary.rst  index.rst
source/chapter_01_compilation/: 01_compilation_pipeline.rst  02_intermediate_files.rst  03_fatbinary.rst  04_multiarch_fatbinary.rst  05_sass_execution.rst  06_ptx_jit.rst  index.rst
source/chapter_02_toolchain/: 01_nvcc.rst  02_cudafe.rst  03_cicc.rst  04_ptxas.rst  05_nvlink.rst  06_libdevice.rst  (+6 more)
(+16 files in other folders)
